Django Tutorial Part 6: Generic list and detail views

--- a/locallibrary/locallibrary/.env
+++ b/locallibrary/locallibrary/.env
@@ -1,5 +1,5 @@
 DATABASE_ENGINE='django.db.backends.mysql'
-DATABASE_NAME='mydata'
+DATABASE_NAME='locallibrary'
 DATABASE_USER='root'
 DATABASE_PASS=''
 DATABASE_HOST='127.0.0.1'
